cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rasmus Leijon
maintainer:         rleijon@clearstreet.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Util
        Day1
        Day2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
    build-depends:    base, network, containers, split, matrix, vector, parsec, bytestring, pqueue

    hs-source-dirs:   app, src
    default-language: Haskell2010
