cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rasmus Leijon
maintainer:         rleijon@clearstreet.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Util
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
    build-depends:    base, hgraph, network, linearEqSolver, containers, split, matrix, heap, vector, parsec, bytestring, pqueue, monad-memo, mtl, random

    hs-source-dirs:   app, src
    default-language: Haskell2010
